# monoid-comprehensions

./: .gitignore  LICENSE  README.md  monoid-comprehensions.cabal  package.yaml  stack.yaml
ghc-versions/: test
src/: MonoidComprehensions.hs
test/: Spec.hs
