cabal-version: 1.12

name:           monoid-comprehensions
version:        0.1.0.0
synopsis:       An experimental GHC plugin for monoid comprehensions.
description:    Please see the README on GitHub at <https://github.com/WhistlePayer/monoid-comprehensions#readme>
category:       Compiler Plugin
homepage:       https://github.com/WhistlePayer/monoid-comprehensions#readme
bug-reports:    https://github.com/WhistlePayer/monoid-comprehensions/issues
author:         Joshua Price
maintainer:     joshprice247@gmail.com
copyright:      Copyright (c) 2018, Joshua Price
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/WhistlePayer/monoid-comprehensions

library
  exposed-modules:
      MonoidComprehensions
  other-modules:
      Paths_monoid_comprehensions
  hs-source-dirs:
      src
  ghc-options: -Wall
  build-depends:
      base >=4.7 && <5
    , ghc >=8.6 && <8.7
    , syb ==0.7
  default-language: Haskell2010

test-suite monoid-comprehensions-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_monoid_comprehensions
  hs-source-dirs:
      test
  ghc-options: -Wall -Werror -dcore-lint -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      HUnit
    , base >=4.7 && <5
    , ghc >=8.6 && <8.7
    , monoid-comprehensions
    , syb ==0.7
  default-language: Haskell2010
