cabal-version: 1.12

name:           monoid-comprehensions
version:        0.1.0.0
synopsis:       An experimental GHC plugin for monoid comprehensions.
description:    Please see the README on GitHub at <https://github.com/ElderEphemera/monoid-comprehensions#readme>
category:       Compiler Plugin
homepage:       https://github.com/ElderEphemera/monoid-comprehensions#readme
bug-reports:    https://github.com/ElderEphemera/monoid-comprehensions/issues
author:         Joshua Price
maintainer:     elderephemera@gmail.com
copyright:      Copyright (c) 2018, Joshua Price
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
  README.md

source-repository head
  type: git
  location: https://github.com/ElderEphemera/monoid-comprehensions

library
  exposed-modules:
    MonoidComprehensions
  hs-source-dirs: src
  ghc-options: -Wall
  build-depends:
    base >= 4.12.0 && < 4.16,
    ghc >= 8.6.2 && < 9.1,
    syb >= 0.7.2 && < 0.8
  default-language: Haskell2010

test-suite monoid-comprehensions-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
  ghc-options: -Wall -Werror -dcore-lint -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    base >= 4.12.0 && < 4.16,
    HUnit >= 1.6.2 && < 1.7,
    monoid-comprehensions
  default-language: Haskell2010
